The distlock catalog for replica sets doesn't consider the new 'hello' field

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc0
    • Affects Version/s: 4.9.0-alpha4
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Sharding EMEA 2021-05-17
    • 127
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The distlock catalog for replica sets checks whether the serverStatus response contains the ismaster field as a way to validate whether the node is in fact running as a replica set. Since ismaster was renamed to hello in FCV 5.0, we should look for that field as well.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: