SERVER-56472 Make the DistLockCatalog replica set consider the 'hello' field